# pandamonium2023

./: .gitignore
gradebook_calculator_poc/: Cargo.toml
gradebook_calculator_poc/src/: calculator.rs  main.rs
gradebook_calculator_poc/src/calculator/: assignment.rs  assignment_group.rs  course.rs  course_grade_calculator.rs  enrollment.rs  submission.rs
v1/src/: calculate_grade.rs  main.rs
v2/: Cargo.toml  index.html
v2/src/: lib.rs  main.rs
v3/: Cargo.toml  index.html
v3/server/: index.js  package.json
v3/src/: lib.rs
v3/ui/: index.html
v4/: Cargo.toml  index.html
v4/src/: lib.rs
