[package]
name = "v4"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3", features = ["Document", "HtmlButtonElement", "Event", "Window", "MouseEvent", "console", "NodeList"] }

[lib]
crate-type = ["cdylib"]
